# mygis-data

./: .gitignore  LICENSE  dbmigrations.sh  mygis-data.cabal  prueba.hs  sigym-core.cabal
bench/: BenchRasterIO.hs
dbmigrations/: baseline.txt
src/: SIGyM.hs
src/MyGIS/: Data.hs
src/MyGIS/Data/: Context.hs  Database.hs  Dimension.hs  Error.hs  GeoReference.hs  Horizon.hs  IO.hs  Source.hs  SpatialReference.hs  Step.hs  Store.hs  ThirdPartyInstances.hs  Time.hs  Type.hs  Units.hs
src/MyGIS/Data/Database/: Pool.hs
src/MyGIS/Data/IO/: Raster.hs
src/MyGIS/Data/Store/: Generation.hs  Generic.hs  Raster.hs  Registry.hs  Types.hs
src/SIGyM/: Database.hs  Dimension.hs  DynLoad.hs  Dyncompile.hs  Error.hs  GeoReference.hs  IO.hs  SpatialReference.hs  Store.hs  ThirdPartyInstances.hs  Time.hs  Units.hs
src/SIGyM/Database/: Pool.hs  TH.hs
src/SIGyM/IO/: Raster.hs
src/SIGyM/Store/: Generation.hs  Persist.hs  Raster.hs  Registry.hs  Types.hs
tests/: Main.hs  TestContext.hs  TestDynLoad.hs  TestGeneration.hs  TestGeoReference.hs  TestRasterIO.hs  TestUnits.hs
