-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

name:                mygis-data

synopsis:            Core data types and functions used by the mygis library
description:         TODO
license:             BSD3
license-file:        LICENSE
author:              Meteogrid
maintainer:          alberto@meteogrid.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8


library
  hs-source-dirs:
    src

  exposed-modules:     
    MyGIS.Data,
    MyGIS.Data.Type,
    MyGIS.Data.Error,
    MyGIS.Data.Store,
    MyGIS.Data.Source,
    MyGIS.Data.Context,
    MyGIS.Data.Dimension,
    MyGIS.Data.SpatialReference,
    MyGIS.Data.Time,
    MyGIS.Data.Units,
    MyGIS.Data.IO
  
  other-modules:       
    MyGIS.Data.IO.Raster
  
  -- Other library packages from which modules are imported.
  build-depends:
    attoparsec                >= 0.10.4    && < 0.11,
    base                      >= 4         && < 5,
    bytestring                >= 0.9.2.1   && < 1,
    cron                      >= 0.1.1     && < 0.2,
    deepseq                   >= 1.3       && < 1.4,
    dimensional-tf            >= 0.1.1     && < 0.2,
    filepath                  >= 1.3.0.0   && < 1.4,
    text                      >= 0.11      && < 0.12,
    old-locale                >= 1.0.0.4   && < 2,
    time                      >= 1.4       && < 1.5,
    vector                    >= 0.10      && < 0.11,
    binary                    >= 0.7.1     && < 0.8,
    vector-binary-instances   >= 0.2       && < 0.3,
    text-binary               >= 0.1       && < 0.2,
    pipes                     >= 3.3       && < 3.4,
    pipes-safe                >= 1.2       && < 1.3,
    temporary                 >= 1.1       && < 1.2,
    zlib                      >= 0.5.4     && < 0.6

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

test-suite Main
  type:            exitcode-stdio-1.0
  build-depends:   
                   base,
                   bytestring,
                   filepath,
                   HUnit                            >= 1.2 && < 2,
                   QuickCheck                       >= 2.4,
                   test-framework                   >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   test-framework-th,
                   temporary,
                   mygis-data
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  tests
  main-is:         Main.hs

benchmark RasterIO
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          BenchRasterIO.hs
  build-depends:    base,
                    criterion,
                    temporary,
                    filepath,
                    mygis-data
  ghc-options:      -Wall -fwarn-tabs -funbox-strict-fields -fllvm -optlo-O3 -O2
