-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

name:                sigym-core

synopsis:            Core data types and functions used by the mygis library
description:         TODO
license:             BSD3
license-file:        LICENSE
author:              Meteogrid
maintainer:          alberto@meteogrid.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8


library
  hs-source-dirs:
    src

  exposed-modules:     
    SIGyM,
    SIGyM.Database,
    SIGyM.Dyncompile,
    SIGyM.Error,
    SIGyM.Store,
    SIGyM.GeoReference,
    SIGyM.SpatialReference,
    SIGyM.Time,
    SIGyM.Units,
    SIGyM.IO
  
  other-modules:       
    SIGyM.Database.Pool,
    SIGyM.Store.Registry,
    SIGyM.Store.Types,
    SIGyM.Store.Generation,
    SIGyM.Store.Persist,
    SIGyM.ThirdPartyInstances,
    SIGyM.IO.Raster
  
  -- Other library packages from which modules are imported.
  build-depends:
    attoparsec                >= 0.10.4     && < 0.11,
    base                      >= 4          && < 5,
    bytestring                >= 0.10       && < 0.11,
    containers                >= 0.5        && < 0.6,
    cron                      >= 0.1.1      && < 0.2,
    deepseq                   >= 1.3        && < 1.4,
    dimensional-tf            >= 0.1.1      && < 0.2,
    filepath                  >= 1.3        && < 1.4,
    ghc,
    ghc-paths,
    hashmap                   >= 1.3        && < 1.4,
    hashable                  >= 1.2        && < 1.3,
    postgresql-simple         >= 0.3        && < 0.4,
    resource-pool             >= 0.2.1      && < 0.3,
    text                      >= 0.11.3     && < 0.12,
    mtl                       >= 2          && < 3,
    old-locale                >= 1.0.0.4    && < 2,
    time                      >= 1.4        && < 1.5,
    vector                    >= 0.10       && < 1.11,
    binary                    >= 0.5.1      && < 0.8,
    vector-binary-instances   >= 0.2.1      && < 0.3,
    text-binary               >= 0.1        && < 0.2,
    pipes                     >= 3.3        && < 3.4,
    pipes-safe                >= 1.2        && < 1.3,
    temporary                 >= 1.1        && < 1.2,
    zlib                      >= 0.5.4      && < 0.6

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2 -funfolding-use-threshold=16

test-suite Main
  type:            exitcode-stdio-1.0
  build-depends:   
                   base,
                   bytestring,
                   filepath,
                   HUnit                            >= 1.2,
                   QuickCheck                       >= 2.4,
                   test-framework                   >= 0.4.1,
                   test-framework-quickcheck2       >= 0.2.5,
                   test-framework-hunit,
                   test-framework-th,
                   temporary,
                   time,
                   vector,
                   sigym-core
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  tests
  main-is:         Main.hs

benchmark RasterIO
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          BenchRasterIO.hs
  build-depends:    base,
                    criterion,
                    temporary,
                    filepath,
                    sigym-core
  ghc-options:      -Wall -fwarn-tabs -funbox-strict-fields -O2
